<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/group_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/input_hint"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/load"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/shuffle"
            app:layout_constraintStart_toEndOf="@id/group_number"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shuffle_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/advance"
            app:layout_constraintStart_toEndOf="@id/load"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/advance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advance_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/shuffle"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:layout_marginTop="10dp"
        android:background="#686868" />

    <ListView
        android:id="@+id/words_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>